| Summary: | ASTERISK-26598: Saynumber is trying to get "and" from "digits/" subfolder | ||||
| Reporter: | Jonathan Harris (lardconcepts) | Labels: | |||
| Date Opened: | 2016-11-15 02:46:27.000-0600 | Date Closed: | 2017-03-07 10:51:32.000-0600 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Applications/app_saynumber | ||
| Versions: | 14.1.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Ubuntu 16.10 (GNU/Linux 4.8.0-27-generic x86_64) | Attachments: | |||
| Description: | I notice that "and" is missing from digits for (at least) en, en_GB, fr languages (these are all I checked).
Either that, or Saynumber should be picking "and" from root sound directory where "and" lives. {code} [saynumbertest] exten => s,1,Answer() same => n,SayNumber(123) same => n,Hangup() {code} results in "one hundred twenty three", rather than the correct ""one hundred AND twenty three", and the following error: {code} [Nov 14 10:00:54] WARNING[11209][C-00000046]: file.c:774 ast_openstream_full: File digits/and does not exist in any format [Nov 14 10:00:54] WARNING[11209][C-00000046]: file.c:1110 ast_streamfile: Unable to open digits/and (format (alaw)): No such file or directory {code} (Can't find saynumber under dropdown so filing under general) | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-11-15 02:46:28.605-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2016-11-15 11:26:44.442-0600 Thanks for filing this. I see you marked it as regression. Can you indicate the last version you found where this behavior did not occur? By: Jonathan Harris (lardconcepts) 2016-11-15 11:30:07.762-0600 I'm sorry, I don't know. I was just assuming that someone would have picked this up before if it had been previously like this. Perhaps I shouldn't have marked it as such - feel free to change the status! Thanks. By: cloos (cloos) 2016-11-15 16:14:19.479-0600 It turns out styles are different over there on this issue: From http://www.englishlessonsbrighton.co.uk/saying-large-numbers-english/ : > Generally, in British English we usually connect large numbers with double > or single digit figures with and, but in American English and is not used So if the en_GB recordings or saynumber() function is changed, do not change the en_US; those are already correct. By: Daniel Journo (journo) 2017-03-06 15:58:08.759-0600 As far as I can see, this is only an issue in en_GB. I don't believe the french say 'and' within a number. Thanks cloos for pointing out that American English do not use 'and'. By: Friendly Automation (friendly-automation) 2017-03-07 10:51:33.697-0600 Change 5128 merged by zuul: Saynumber is trying to get "and" from "digits/" subfolder [https://gerrit.asterisk.org/5128|https://gerrit.asterisk.org/5128] By: Friendly Automation (friendly-automation) 2017-03-07 10:51:36.600-0600 Change 5130 merged by zuul: Saynumber is trying to get "and" from "digits/" subfolder [https://gerrit.asterisk.org/5130|https://gerrit.asterisk.org/5130] By: Friendly Automation (friendly-automation) 2017-03-07 10:53:22.423-0600 Change 5129 merged by Joshua Colp: Saynumber is trying to get "and" from "digits/" subfolder [https://gerrit.asterisk.org/5129|https://gerrit.asterisk.org/5129] | ||||